Update GETTING_STARTED.md and add getting started templates